Fix the icon size being too small

--- a/packages/Administration/Resources/app/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.scss
+++ b/packages/Administration/Resources/app/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.scss
@@ -349,8 +349,8 @@ $sw-admin-menu-active-text: $color-white;
         color: $sw-admin-menu-color-text-primary;
 
         &.sw-icon {
-            width: 16px;
-            height: 16px;
+            width: 24px;
+            height: 24px;
             padding-top: 4px;
             padding-right: 3px;
             padding-bottom: 6px;
